--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Maijla Ikiz's portfolio website"/>
+    <meta name="theme-color" content="#1B1D29" />
+    <meta name="description" content="Welcome to the ultimate tech-themed portfolio site! Get to know Maijla and explore her projects with ease by utilizing custom commands that simulate a terminal environment."/>
+    <meta name="author" content="Maijla Ikiz">
+
+    <!--  Essential META Tags -->
+    <meta property="og:title" content="guest@term.noya: view-portfolio">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://noyamirai.nl/noyamirai_thumbnail.png">
+    <meta property="og:url" content="https://noyamirai.nl">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <!--  Non-Essential, But Recommended -->
+    <meta property="og:description" content="Welcome to the ultimate tech-themed portfolio site! Get to know Maijla and explore her projects with ease by utilizing custom commands that simulate a terminal environment.">
+    <meta property="og:site_name" content="guest@term.noya: view-portfolio">
+    <meta name="twitter:image:alt" content="Alt text for image">
     
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://use.typekit.net/xra3dmk.css">
